(library
 (name problems)
 (libraries core core_unix.time_float_unix core_unix.sys_unix stdio)
 (inline_tests)
 (preprocess
  (pps ppx_jane))
 (lint
  (pps ppx_js_style -annotated-ignores -styler -pretty -dated-deprecation)))
(env
 (dev
  (flags (:standard -w -32 -w -37 -warn-error -A)))
 (release
  (ocamlopt_flags (:standard -O3))))
